more SEO. oh my!

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>ngXpress | The Full-Stack Angular Starter Kit</title>
+  <title>GigaWhat – Jam Sessions, Open Mics, Gigs & Live Music Venues in the Netherlands</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
